+ Limit test CI to files that effect the tests

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -3,8 +3,16 @@ on:
   push:
     branches:
       - main
+    paths:
+      - src/**
+      - test/**
+      - Project.toml
     tags: ['*']
   pull_request:
+    paths:
+      - src/**
+      - test/**
+      - Project.toml
 concurrency:
   # Skip intermediate builds: always.
   # Cancel intermediate builds: only if it is a pull request build.
